--- a/content/book/1/1.3.md
+++ b/content/book/1/1.3.md
@@ -217,17 +217,13 @@ $2^{10} = 1024 ≈ 1000 = 10^3$
 
 Обратный перевод числа в дополнительном коде происходит тем же самым образом: если старшая цифра – 0, то число положительное и перевод не требуется, иначе число считается отрицательным и для него выполняются два последних пункта процедуры перевода. Рассмотрим пример:
 
--386 - отрицательное число
+**-386 - отрицательное число** <br/>
+**0386 - абсолютное значение с лишним 0** <br/>
+**9613 - дополнение каждой цифры до 9** <br/>
+**9614 - добавление** 1 <br/>
 
-0386 - абсолютное значение с лишним 0
-
-9613 - дополнение каждой цифры до 9
-
-9614 - добавление 1
-
-512 - 386 = 0512 + 9614 = (1)0126 = +126
-
-119 - 386 = 0119 + 9614 = 9733 = 0266+1 = -267
+**512 - 386 = 0512 + 9614 = (1)0126 = +126** <br/>
+**119 - 386 = 0119 + 9614 = 9733 = 0266+1 = -267** <br/>
 
 Если внимательно присмотреться, то дополнение каждой цифры до 9 имеет некоторую аналогию с вычитанием. Но как бы там ни было, получаем следующий результат: вычитание или же сложение чисел со знаком заменяется операцией сложения, выполненной для беззнаковых чисел.
 
@@ -243,39 +239,26 @@ $2^{10} = 1024 ≈ 1000 = 10^3$
 
 Ту же самую последовательность операций нужно выполнить, чтобы получить из дополнительного кода абсолютное значение отрицательного числа. В Си это можно сделать и при помощи поразрядных (машинно-ориентированных) операций:
 
-int a=5; a = (~a)++; // получим -5
+`int a=5; a = (~a)++; // получим -5`
 
 Старший разряд в таком представлении также играет роль знакового. Для отрицательных чисел он равен 1. Рассмотрим, как выглядит представление граничных значений диапазона в шестнадцатеричной системе:
 
-00000000 0
-
-00000001 1
-
-00000002 2
-
-…
-
-0000003F 63
-
-…
-
-7FFFFFFF 2n-1-1
-
-80000000 -0 (минус 0)
-
-80000001 -(2n-1-1)
-
-80000002 -(2n-1-2)
-
-…
-
-FFFFFFF0 - 16
-
-FFFFFFF1 - 15
-
-…
-
-FFFFFFFF -1
+| 00000000 | 0 |
+|----------|---|
+| 00000001 | 1 |
+| 00000002 | 2 |
+| …| |
+| 0000003F | 63 |
+| …| |
+| 7FFFFFFF | $2^{n-1}-1$ |
+| 80000000 | -0 (минус 0) |
+| 80000001 | $-(2^{n-1}-1)$ |
+| 80000002 | $-(2^{n-1}-2)$ |
+| …| |
+| FFFFFFF0 | - 16 |
+| FFFFFFF1 | - 15 |
+| …| |
+| FFFFFFFF | -1 |
 
 Особенным является значение **80000000**. Оно называется «минус 0», поскольку является дополнительным кодом самого себя (как и обычный 0). Оно используется для специальных целей, например, для обозначения неинициализированных переменных или недопустимых результатов.
 
@@ -337,7 +320,7 @@ FFFFFFFF -1
 т.е. операции над ними «один в один» транслируются в соответствующие машинные команды. 
 Естественно, что БТД обозначаются в любом языке **ключевыми словами**.
 
-**Производные типы данных (ПТД)** конструируются программистом из уже известных в программе базовых и производных типов. В результате в программе возникает иерархия типов, некоторые из них могут обозначаться дополнительными именами, которые можно использовать синтаксически как базовые. В объектно-ориентированном программировании (Си++) таковыми являются имена классов. Дальнейшее изложение идей проектирования данных – в гл.5,11.
+**Производные типы данных (ПТД)** конструируются программистом из уже известных в программе базовых и производных типов. В результате в программе возникает иерархия типов, некоторые из них могут обозначаться дополнительными именами, которые можно использовать синтаксически как базовые. В объектно-ориентированном программировании (Си++) таковыми являются имена классов. Дальнейшее изложение идей проектирования данных – в гл.**5,11**.
 
 Переменная в ее первичном архитектурном понимании – это область памяти, в которой содержатся данные определенного типа. Имя переменной напрямую ассоциируется с ее адресом, содержимое памяти – со значением переменной.
 
@@ -387,11 +370,11 @@ short s; // целое со знаком, короткое слово <br/>
 
 Для определения размерности различных переменных и типов в Си имеется специальная операция, которая возвращает размерность типа данных, переменной и значения выражения, подсчитанную в байтах:
 
-sizeof (int) // размерность типа данных int - 4
-
-sizeof l // размерность переменной типа long - 4
-
+```c
+sizeof (int)  // размерность типа данных int - 4
+sizeof l      // размерность переменной типа long - 4
 sizeof(i+2.0) // размерность значения выражения типа double - 8
+```
 
 По умолчанию константы считаются десятичными целыми со знаком. Восьмеричные константы начинаются с 0. Шестнадцатеричные константы имеют префикс 0x. Для длинных целых и беззнаковых целых используются модификаторы констант – L(l) и U(u).
 
@@ -399,17 +382,16 @@ sizeof(i+2.0) // размерность значения выражения ти
 
 Одной из форм представления целого является также перечислимый тип enum. Переменная такого типа принимает ряд значений, которые перечислены в отдельном определении типа enum в виде идентификаторов (имен). Каждому идентификатору соответствует явно заданное или неявно полученное при перечислении значение:
 
+```c
 enum BOOL { FALSE, TRUE}; // 0,1
-
 enum digit { four=4,one=1,two,three }; // 4,1,2,3.
-
 BOOL x; ... if (x==FALSE) ...
-
 digit D; ... D = ten; ...
+```
 
 В данном примере перечислимый тип BOOL имеет два значения - 0 и 1, которые обозначаются соответственно как FALSE и TRUE. Имя BOOL затем используется для определения переменной этого типа с именем x, которая может принимать указанные значения. То же самое производится в типом digit и переменной D. Как видим, перечислимый тип не выходит за рамки обычного целого. Более того, любая переменная такого типа в трансляторе реализуется как обычное целое и в процессе выполнения программы не проверяется на допустимость тех или иных значений. Например, можно написать:
 
-x = 3; // Присвоить 3 переменной типа digit
+`x = 3; // Присвоить 3 переменной типа digit`
 
 Тогда зачем же они нужны? Для придания большей ясности программе: обозначения ограниченного количества вариантов, признаков и т.д..
 
@@ -428,14 +410,10 @@ x = 3; // Присвоить 3 переменной типа digit
 не может быть изменено в процессе выполнения программы. 
 Элементы массива размещаются в памяти последовательно и нумеруются от **0** до **n-1**, где **n** - их количество в массиве. Пример определения массива :
 
-int а[20] = {1,5,4,7}; где
-
-int - тип данных элементов массива
-
-a - имя массива
-
-20 - количество элементов массива
-
-1,5,4,7 - инициализация (начальные значения первых 4 элементов, остальные 0)
+int а[20] = {1,5,4,7}; где <br/>
+int - тип данных элементов массива <br/>
+a - имя массива <br/>
+20 - количество элементов массива <br/>
+1,5,4,7 - инициализация (начальные значения первых 4 элементов, остальные 0) <br/>
 
 Важная особенность массивов в Си: во время работы программы контроль за нахождением индексов в пределах размерности массива не производится. В случае выхода за пределы массива будут использованы значения переменных в соседних областях памяти и результат работы программы будет непредсказуем.
