--- a/content/book/1/1.6.md
+++ b/content/book/1/1.6.md
@@ -1,12 +1,12 @@
 ---
 title: '1.6. Функции и структура программы'
-metaTitle: 'Syntax Highlighting is the meta title tag for this page'
-metaDescription: 'This is the meta description for this page'
+metaTitle: '1.6. Функции и структура программы'
+metaDescription: '1.6. Функции и структура программы'
 ---
 
 Следующим уровнем в синтаксической структуре программы за выражениями и операторами является уровень функций. В отличие от предыдущих он является не только средством описания некоторой части программы, но и служит для оформления логически завершенного действия с собственным набором входных и выходных параметров. Термин функция, принятый в Си, имеет в других языках программирования родственные термины - процедура, модуль. Функция является основной программной единицей уже потому, что вся программа представляет собой множество вызывающих друг друга функций. Часть из них может быть получена «со стороны» - из библиотек или из программ, написанных в другое время, в другом месте, другими людьми и даже на другом языке программирования. То есть на уровне функций осуществляется «сборочный процесс» программы из отдельных составляющих.
 
-Синтаксис определения и вызова функции
+## Синтаксис определения и вызова функции
 
 Синтаксис функций \(определения и вызова\) включает в себя до десятка терминов и определений, поэтому придется сначала договориться о терминологии, не вникая в суть, а затем обсуждать механизмы ее работы.
 
@@ -76,7 +76,7 @@ void main(int narg, char *argv[]) {...}  // с интерфейсом коман
 - массивы передаются исключительно по ссылке, т.е. отображаются;
 - для явного указания способа передачи параметра по ссылке служит символ «**&**», который записывается перед именем формального параметра.
 
-Механизм вызова функции
+## Механизм вызова функции
 
 Механизм вызова функции является динамическим, т.е. действия, связанные с его реализацией, осуществляются при выполнении программы. Именно поэтому текст программы и его «развертка» во времени представляют для функции «две большие разницы». Это касается двух вещей:
 
@@ -110,3 +110,308 @@ void main(int narg, char *argv[]) {...}  // с интерфейсом коман
 11. одновременно **return** производит переход в вызывающую функцию **main** в точку возврата;
 
 12. продолжается выполнение программного кода вызывающей функции.
+
+## Области действия функций. Определения и объявления
+
+До сих пор мы ничего не говорили ни о взаимном расположении в программе определения функции и ее вызова, ни о соответствии формальных и фактических параметров, ни о контроле такого соответствия. Конечно, нельзя считать, что транслятор «знает» о всех функциях, когда либо написанных, либо находящихся в библиотеках, текстовых файлах и т.д.. Каждая программа должна сама сообщать транслятору необходимую информацию о функциях, которые она собирается вызывать. Перечислим, какую именно:
+
+- имя функции;
+
+- тип результата;
+
+- список формальных параметров (переменные и типы).
+
+При ее наличии транслятор может корректно сформировать вызов функции, даже если текст ее (определение) отсутствует в программе. Вся перечисленная информация о функции находится в ее заголовке. Таким образом, достаточно этот заголовок привести отдельно, и проблема корректного вызова решается. Такой заголовок называется **объявлением** или в рассматриваемом нами варианте синтаксиса **прототипом функции**
+
+Теперь перечислим причины такого «незнания» транслятора. Во-первых, трансляторы обычно используют довольно простые алгоритмы просмотра текста программы, «не заглядывая» вперед. Поэтому обычно на данный момент трансляции содержание текста программы за текущим транслируемым оператором ему неизвестно. Во-вторых, функция может быть в библиотеке. В третьих - в другом текстовом файле (модуле), содержащем часть Си-программы. Во всех этих случаях необходимо использовать объявления. Единственный случай, когда этого делать не надо, когда определение функции присутствует ранее по тексту программы.
+
+```c
+int B[10];
+int sum(int s[],int n); // Объявление функции,
+                        // определенной далее по тексту
+extern int printf(char *,...); // Объявление библиотечной функции
+                               // с переменным числом параметров
+extern int other(void); // Объявление функции без
+                        // параметров из другого
+void main()             // файла программы
+{ sum(B,10); other(); } // Вызовы объявленных функций
+int sum(int s[], int n) {...} // Определение ранее объявленной функции
+```
+
+Из примера видно, что объявление функции практически дублирует заголовок, отличаясь в некоторых деталях:
+
+- объявление заканчивается символом ";" ;
+
+- если функция находится вне текущего файла, то объявление предваряется служебным словом extern;
+
+- имена переменных в списке формальных параметров объявления могут отсутствовать;
+
+- если функция не имеет формальных параметров, то в объявлении присутствует формальный параметр типа void.
+
+Имея предварительно определенную функцию или ее объявление, транслятор в состоянии проверить соответствие формальных и фактических параметров как по их количеству, так и по типам. При этом транслятор может выполнить неявные преобразования типов фактических параметров к типам формальных, если это потребуется:
+
+```c
+extern double sin(double);
+int    x; double y;
+y = sin(x); //------Неявное преобразование (double)x
+```
+
+## Глобальные переменные. Инициализация
+
+Программа в целом представляет собой набор вызывающих друг друга функций с обязательной функцией main, имеющих собственные наборы локальных переменных.
+
+Но кроме этого в ее состав включаются еще переменные, доступные сразу нескольким функциям. Такие переменные называются глобальными (в терминологии Си – **внешними**). Будучи определенными в любом месте программы вне тела функции, они становятся доступными любой функции, следующей за ней по тексту программы:
+
+```c
+int         B[10];                  // B
+
+int  sum()                      // B
+
+            { ...B[i]... }               // B
+
+int n;                         // B,n
+
+void nf()                       // B,n
+
+{...B[i]...n...}              // B,n
+
+char c[80];                     // B,n,c
+
+void main()                     // B,n,c
+
+{...B[i]...n...c[k]...}          // B,n,c
+```
+
+Глобальные (внешние) переменные являются «стабильными» данными в программе. Транслятор переводит их во внутреннее представление, в котором им соответствуют определенные адреса памяти в сегменте данных (см.1.2). Можно сказать, что эти переменные находятся в программе (программном файле) еще до загрузки ее в память. Такое присваивание начальных значений переменным при их трансляции называется **инициализацией**. Инициализация включается в синтаксис определения переменной:
+
+`Int a=5, B[10]= {1,5,4,2}, C[]={ 0,1,2,3,4,5 };`
+
+Инициализатор отделяется от переменной в ее определении знаком «=». Для простой переменной - это обычная константа, для массива - список констант, заключенных в фигурные скобки и разделенных запятыми. Заметим, что размерность массива может отсутствовать, если транслятор в состоянии определить ее из инициализирующего списка.
+
+&nbsp;<Icon name="Smile"/> Использование глобальных переменных в программе «не есть хорошо». Во-первых, оно ограничивает возможность работы функции одним и тем же набором параметров, Во-вторых, создает неявные связи через данные между различными функциями. Поэтому предпочтительнее передавать данные между функциями через формальные параметры. Иначе говоря, программисты по своей природе должны быть «антиглобалистами».
+
+##Попытка собрать все в кучу
+
+После такого количества определений и терминов не грех рассмотреть различные варианты организации интерфейса функции и ее вызова.
+
+**«Процедура» без параметров.** Функция, не имеющая формальных параметров и результат типа void (в традиционных терминах - процедура), выполняет некоторый набор фиксированных внутренних действий.
+
+```c
+//-------------------------------------------------
+void Hello(){ printf("Hello, Im here"); }
+void main(){ Hello(); }
+```
+
+**Входные параметры-значения.** Параметры-значения, используемые как входные, используются для вычисления результата – наименьшего общего кратного.
+
+```c
+//-------------------------------------------------
+int nod(int a,int b) {
+  for (int n=a; !(n%a==0 && n%b==0);n++);
+  return n; 
+}
+void main() { int y=nod(36,54); }
+```
+
+**Ссылка на внешнее значение.** Функция не имеет явного результата. Параметр, передаваемый явно по ссылке, используется для изменения (инкремента) внешнего значения, на который отображается ссылка.
+
+```c
+//-------------------------------------------------
+void inc(int &n){ n++; }
+void main(){ int m=6; inc(m); }      // Значение m=7 после вызова
+```
+
+**Обмен значений с использованием двух ссылок.** Функция не имеет явного результата. Два формальных параметра, передаваемых по ссылке, используются для обмена значений в тех переменных, на которые они ссылаются.
+
+```c
+//-------------------------------------------------
+void swap(int &a, int &b){
+            int c=a; a=b;b=c; }
+void main(){ int m1=5,m2=7; swap(m1,m2); }        // m1=7, m2=5 после вызова
+```
+
+**Обмен значений в массиве.** Во внешнем массиве, передаваемом по ссылке, производится обмен значениями попарно от краев к середине. Размерность массива передается по значению. Явного результата функция не имеет.
+
+
+
+```c
+//-------------------------------------------------
+void swap(int A[],int n){
+            for (int i=0,j=n-1;i<j;i++,j--)
+                        { int c=A[i];A[i]=A[j];A[j]=c; }
+            }
+void main(){
+            int B[]={3,6,4,5,7};
+            swap(B,5); }
+```
+
+**Результат функции – максимальное значение массива.** Функция получает массив по ссылке (единственно допустимый способ), используя его как входные данные. Находит максимальное значение и возвращает его в качестве переменной-результата.
+
+
+
+```c
+//-------------------------------------------------
+
+int max(int A[],int n){
+
+            for (int i=1,s=A[0];i<n;i++)
+
+                        if (A[i]>s) s=A[i];
+
+            return s; }
+
+void main(){
+
+            int m,B[]={3,6,4,5,7};
+
+            m=max(B,5);}
+```
+
+
+**Максимальное значение массива, возвращаемое по ссылке.** Вариант, аналогичный предыдущему, но функция, не имея явного результата, возвращает максимальное значение по ссылке.
+
+
+
+```c
+//-------------------------------------------------
+
+void max(int &s,int A[], int n){
+
+            int i;
+
+            for (i=1,s=A[0];i<n;i++)
+
+                        if (A[i]>s) s=A[i];
+
+}
+
+void main(){
+
+            int m,B[]={3,6,4,5,7};
+
+            max(m,B,5); }
+```
+
+
+**Массив как результат функции.** Функция не может возвратить массив в качестве переменной-результата. Для того, чтобы это сделать, необходимо передать «пустой» внешний массив по ссылке, который заполняется в процессе вызова функции.
+
+
+
+```c
+//-------------------------------------------------
+
+int pull(int v,int A[],int n){
+
+            int i=0,m=2;
+
+            while(v!=1 && i!=n){
+
+                        if (v%m==0) { A[i++]=m; v/=m; }
+
+                        else m++;
+
+                        }
+
+            return i; }
+
+void main(){
+
+            int k,B[10];
+
+            k=pull(1275,B,10); }
+```
+
+
+**Функция с двумя результатами.** Функция, определяющая в массиве первую последовательность одинаковых значений, возвращает в качестве результата индекс начала и длину такой последовательности. Индекс возвращается в виде явного результата, длина – через формальный параметр – ссылку.
+
+
+
+```c
+//-------------------------------------------------
+
+int len(int &k,int A[],int n){
+
+            for (int i=0;i<n;i++){
+
+                        for (k=1;i+k<n && A[i]==A[i+k];k++);
+
+                        if (k>1) return i;
+
+                        }
+
+            return -1;}
+
+void main(){
+
+            int k1,m1,B[10]={5,7,6,6,6,6,6,6,5,7};
+
+            k1=len(m1,B,10); }
+```
+
+В заключение отметим ряд типичных ошибок, допускаемых при определении и вызове функции:
+
+- «вилка и розетка» - несоответствие количества и типов формальных и фактических параметров равносильно использованию в электротехнике розеток и вилок с разным числом и размерами контактов.
+
+
+
+```c
+void F(int a, int b) {…}
+
+void main(){
+
+            n=5;                              // «Две дырки и один штырек»
+
+            F(n);}
+```
+- «функция функции рознь» - то, что выполнение вызываемой функции «вкладывается» в последовательность выполнения вызывающей, вовсе не означает, что они должны быть записаны одна внутри другой. Синтаксически функции являются независимыми друг от друга единицами;
+
+
+
+```c 
+void F() {
+
+            void G(){ }                    // Вложенное определение
+
+                                                // вместо вызова одной функции из другой
+
+}
+```
+- «Алиса в Зазеркалье» -  каждая функция имеет свой контекст, в вызывающей функции – свой, в вызываемой – свой. Попытки использовать контекст одной функции, находясь в другой, сравнимы с попыткой схватить собственное отражение в зеркале. Связь между контекстами устанавливается только через взаимодействие формальных и фактических параметров;
+
+```c 
+void F(int n) {
+
+            int a=5;
+
+}
+
+void main(){
+
+            n=5;                             // Использование контекста вызываемой функции
+
+            F(n);
+
+}```
+
+- «путаница в синтаксисе». Синтаксис формальных и фактических параметров принципиально различны. Если формальный параметр задается как определение особой интерфейсной переменной, то фактический параметр имеет синтаксис использования или обозначения уже определенной переменной или выражения – последовательности действий, выполненных над несколькими такими переменными.
+
+```c 
+void F(int A[], int n) {
+
+            int a=5;
+
+}
+
+void main(){ int B[]={1,5,6};
+
+            F(B[],3);                        // B должно быть без скобой -
+
+}                                   // обозначение объекта, который является МАССИВОМ
+```
+
+
+&nbsp;<Icon name="Smile"/>Прекрасной иллюстрацией механизм вызова функции и передачи ее результата служит «Сказка о петушке и бобовом зенышке»: петушок подавился зернышком, курочка побежала к корове за маслом, корова отправила ее к косцам за сеном, косцы отправили к кузнецу за косой. Кузнец отковал косу и т.д. в обратном порядке. Корова, косцы и кузнец – это в терминологии программирования функции, коса, сено и масло – результаты функций, а курочка – процессор.
+
+&nbsp;<Icon name="YinAndYang"/>Понятия функции и ее формальных параметров – это еще один уровень абстрагирования. Формальный и фактический параметр относятся друг к другу как категории «общее-частное». Аналогичное соотношение имеет место между переменной и ее значением. Любая переменная в каждый момент времени может хранить одно из значений, но как элемент программирования рассматривается как некоторое «обобщенное» значение. Точно так же формальному параметру при каждом вызове ставится в соответствие конкретный фактический параметр, а при разработке функции формальный параметр является обобщением, обозначающим любой возможный фактический параметр.
+
+!['Рис. 16.3. Функция как уровень обобщения'](./assets/016-03.png)
