--- a/content/book/1/1.1.md
+++ b/content/book/1/1.1.md
@@ -1,7 +1,7 @@
 ---
 title: "1.1. Структура программы и языка программирования"
 metaTitle: "1.1. Структура программы и языка программирования"
-metaDescription: "This is the meta description for this page"
+metaDescription: "1.1. Структура программы и языка программирования"
 ---
 
 Изучение программирования нельзя начать, не ответив на ряд вопросов: а что же такое программа, алгоритм, данные, язык программирования. В этом списке основным термином является **алгоритм,** который, как и большинство понятий общего вида, имеет множество определений. Например:
