--- a/content/book/1/1.6.md
+++ b/content/book/1/1.6.md
@@ -68,7 +68,7 @@ void main(int narg, char *argv[]) {...}  // с интерфейсом коман
 - при изменении значений формальных параметров эти изменения проецируются на соответствующие им фактические;
 - передача параметров по ссылке может использоваться для данных, которые являются либо чисто выходными \(неявный результат функции\), либо представляют собой внешние для функции данные, которые она должна изменить.
 
-![](../../.gitbook/assets/science.jpg) \*\*\*\*Доступ к объекту в виде значения \(копии\) и ссылки на оригинал широко используются в информационных технологиях. Для любого набора данных можно создать копию, передав ее пользователю, либо создать ссылку на оригинал. Например, на рабочем столе можно разместить копию файла \(аналог передачи по значению\), либо его ярлык \(аналог передачи по ссылке\).
+&nbsp;<Icon name="Science"/>Доступ к объекту в виде значения \(копии\) и ссылки на оригинал широко используются в информационных технологиях. Для любого набора данных можно создать копию, передав ее пользователю, либо создать ссылку на оригинал. Например, на рабочем столе можно разместить копию файла \(аналог передачи по значению\), либо его ярлык \(аналог передачи по ссылке\).
 
 В Си приняты следующие правила передачи, которые определяются синтаксическим видом формальных параметров в заголовке функции:
 
