content 5.2 add pictures

--- a/content/book/5/5.2.md
+++ b/content/book/5/5.2.md
@@ -35,7 +35,7 @@ metaDescription: '5.2. Указатели и ссылки'
 Наряду с указателем в программировании также используется термин **ссылка**.   Ссылка – содержанием ссылки также является адресная информация об объекте (переменной), но внешне она выглядит как переменная (синоним оригинала).
 
 
-рис. 52-1. Указатель в информационных технологиях и в архитектуре
+![рис. 52-1. Указатель в информационных технологиях и в архитектуре](./assets/052-01.png)
 
 **Указатель как элемент архитектуры компьютера**. Указатели занимают особое место среди типов данных, потому что они проецируют на язык программирования ряд важных принципов организации обработки данных в компьютере. Понятие указателя связано с такими понятиями компьютерной архитектуры как адрес, косвенная адресация, организация внутренней (оперативной) памяти. От них мы и будем отталкиваться.  **Внутренняя (оперативная) память** компьютера представляет собой упорядоченную последовательность байтов или машинных слов (ячеек памяти), проще говоря - массив. Номер байта или слова памяти, через который оно доступно как из команд компьютера, так и во всех других случаях, называется **адресом**. Если в команде непосредственно содержится адрес памяти, то такой доступ этому слову памяти называется **прямой адресацией**.
 
@@ -52,7 +52,8 @@ metaDescription: '5.2. Указатели и ссылки'
 - переменная, адрес которой содержится в указателе, называется **указуемой** переменной.
 
 
-рис. 52-2. Определение указателя и операции над ним
+![рис. 52-2. Определение указателя и операции над ним](./assets/052-02.png)
+
 
 Последовательность действий при работе с указателем включает 3 шага:
 
@@ -86,6 +87,8 @@ x = x + *p; // Эквивалентно x=x+a
 
 Указатель дает «**степень свободы**» или универсальности любому алгоритму обработки данных. Действительно, если некоторый фрагмент программы получает данные непосредственно в некоторой переменной, то он может обрабатывать ее и только ее. Если же данные он получает через указатель, то обработка данных (указуемых переменных) может производиться в любой области памяти компьютера (или программы). При этом сам фрагмент может и «не знать», какие данные он обрабатывает, если значение самого указателя передано программе извне.
 
+![](./assets/052-03.jpg)
+
 ## Адресная арифметика и управление памятью
 
 Способность указателя ссылаться на «отдельно стоящие» переменные не меняет качества языка, поскольку нельзя выйти за рамки множества указуемых переменных, определенных в программе. Такая же концепция указателя принята, например, в Паскале. Но в Си существует еще одна, расширенная интерпретация, позволяющая через указатель работать с массивами и с памятью компьютера ни низком (архитектурном) уровне без каких-либо ограничений со стороны транслятора. Это  «свобода самовыражения» обеспечивается одной дополнительной  операцией **адресной арифметики**. Но сначала определим свойства указателя в соответствии с расширенной интерпретацией.
@@ -102,8 +105,8 @@ x = x + *p; // Эквивалентно x=x+a
 
 
 
+![рис. 52-3. Адресная арифметика](./assets/052-04.png)
 
-рис. 52-3. Адресная арифметика
 
 |Синтаксис | Смысл |
 |----------|-------|
@@ -324,7 +327,8 @@ b++;      // Операция над b есть операция над прот
 
 Таким образом, в Си возможны целых три способа передачи параметра: по значению, по ссылке и с использованием явного указателя. Формальный параметр-ссылка совпадает с формальным параметром-значением **по форме** (синтаксису использования), а с указателем - **по содержанию** (механизму реализации, вплоть до совпадения программного кода).
 
-рис. 52-4. Передача параметров по значению, указателю и ссылке
+![рис. 52-4. Передача параметров по значению, указателю и ссылке](./assets/052-05.png)
+
 
 ```c
 //-----------------------------------------------------------------
